# RenderEngine

./: .gitignore  BUILD.bat  Build.ps1  CMakeLists.txt  Cl.ps1  Clear.ps1  README.md  imgui.ini
Assets/Editor/: SceneNodeDefs.json
Assets/SceneNodes/: LightNode.json  MeshNode.json  PawnNode.json  TestNode.json
Assets/Scenes/: TestScene.json
Assets/Shaders/: Actor.frag  Actor.vert  Billboard.frag  Billboard.vert  Billboard_frag.glsl  Billboard_vert.glsl  Color_frag.glsl  Color_vert.glsl  Flat_frag.glsl  Framebuffer_test.progpipeline  Framebuffer_test_frag.glsl  Framebuffer_test_vert.glsl  Lights_dbg_frag.glsl  Lights_dbg_vert.glsl  LitTexturedColored1.frag  LitTexturedColored1.vert  Phong_frag.glsl  Phong_vert.glsl  Shader.vert  Sky.progpipeline  Sky_frag.glsl  Sky_vert.glsl  Terrain.frag  Terrain.vert  Terrain_frag.glsl  Terrain_vert.glsl  TexturedLit.frag  TexturedLit.progpipeline  TexturedLit.vert  (+16 more)
Docs/: BlenderNormalVec.txt  CppCodingStandard.md  TrigonometryCheatsheet.txt
Source/: Actor.cpp  Actor.h  ActorComponents.cpp  ActorComponents.h  App.cpp  App.h  Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  Buffers.cpp  Buffers.h  Camera.cpp  Camera.h  Common.h  Components.cpp  Components.h  Console.cpp  Console.h  EventManager.cpp  EventManager.h  Events.h  Framebuffer.cpp  Framebuffer.h  GLCommon.cpp  GLCommon.h  Geometry.h  Lights.cpp  Lights.h  Main.cpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshGen.cpp  MeshGen.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  (+13 more)
Temp/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
(+49 files in other folders)
